--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,36 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+#.net
+# Бинарные файлы
+bin/
+obj/
+
+# Папка с кэшем пакетов NuGet
+*.nupkg
+packages/
+
+# Логи и временные файлы
+*.log
+*.tmp
+
+# Файлы конфигурации среды
+appsettings.Development.json
+appsettings.Production.json
+
+# Файлы, создаваемые Visual Studio
+.vs/
+*.suo
+*.user
+*.userprefs
+
+# Файлы, создаваемые Rider
+.idea/
+
+# Папка с артефактами сборки
+**/bin/
+**/obj/
+
+# Папка с кэшем NuGet
+*.nupkg
+*.snupkg
+
+# Папка с временными файлами Visual Studio
+.vs/
