Создали базу данных (файл), реализовали методы для работы с БД, использовали мьютексы

--- a/Magazine.WebApi/appsettings.json
+++ b/Magazine.WebApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DataBaseFilePath": "d:\\Уник\\3 курс\\5 семестр\\net\\лабы\\.NET\\database.txt",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
